--- a/rsc/vip_index.html
+++ b/rsc/vip_index.html
@@ -111,6 +111,10 @@
                 <h3>5. Customizable Interface</h3>
                 <p>Personalize your SnowX Checker with VIP-only customization options.</p>
             </div>
+
+            <div class="benefit">
+                <h3>Dev by SnowXChecker (Rory.Sorner)</h3>
+            </div>
         </div>
         <button class="cta-button" onclick="window.location.href='https://your-purchase-link.com'">Become a VIP Member Now</button>
     </div>
