--- a/rsc/vip_index.html
+++ b/rsc/vip_index.html
@@ -91,6 +91,18 @@
     <div class="container">
         <h2>Why Go VIP?</h2>
         <div class="benefits">
+
+            <div class="benefit">
+                <h3>¡Hola comunidad de SnowX Checker! 🌟✨</h3>
+                <p>Nos complace presentarles nuestro servicio VIP 🎉, diseñado especialmente para premiar a los usuarios más fieles y activos 💪. Con VIP, tendrán acceso a gates y herramientas únicas 🔑, mejorando su experiencia y facilitando sus operaciones. ¡Recarguen y usen el checker para disfrutar de estos beneficios exclusivos! 🚀🔒
+
+                    ¡Gracias por su apoyo constante! 🙌💼</p>
+            </div>
+
+            
+
+
+
             <div class="benefit">
                 <h3>1. Priority Support</h3>
                 <p>Get your issues resolved faster with our 24/7 VIP support.</p>
@@ -113,7 +125,7 @@
             </div>
 
             <div class="benefit">
-                <h3>Dev by SnowXChecker (Rory.Sorner)</h3>
+                <h3>Dev by SnowXChecker</h3>
             </div>
         </div>
         <button class="cta-button" onclick="window.location.href='https://your-purchase-link.com'">Become a VIP Member Now</button>
