--- a/rsc/vip_index.html
+++ b/rsc/vip_index.html
@@ -84,12 +84,12 @@
 </head>
 <body>
     <header>
-        <h1>Join the SnowX Checker 1.9 VIP Membership</h1>
-        <p>Unlock exclusive features and elevate your experience to the next level.</p>
+        <h1>Únete a la Membresía VIP de SnowX Checker 1.9</h1>
+        <p>Desbloquea características exclusivas y eleva tu experiencia al siguiente nivel.</p>
     </header>
 
     <div class="container">
-        <h2>Why Go VIP?</h2>
+        <h2>¿Por qué ser VIP?</h2>
         <div class="benefits">
 
             <div class="benefit">
@@ -97,31 +97,6 @@
                 <p>Nos complace presentarles nuestro servicio VIP 🎉, diseñado especialmente para premiar a los usuarios más fieles y activos 💪. Con VIP, tendrán acceso a gates y herramientas únicas 🔑, mejorando su experiencia y facilitando sus operaciones. ¡Recarguen y usen el checker para disfrutar de estos beneficios exclusivos! 🚀🔒
 
                     ¡Gracias por su apoyo constante! 🙌💼</p>
-            </div>
-
-            
-
-
-
-            <div class="benefit">
-                <h3>1. Priority Support</h3>
-                <p>Get your issues resolved faster with our 24/7 VIP support.</p>
-            </div>
-            <div class="benefit">
-                <h3>2. Early Access to Features</h3>
-                <p>Be the first to experience new updates and features.</p>
-            </div>
-            <div class="benefit">
-                <h3>3. Enhanced Security</h3>
-                <p>Benefit from advanced security features to protect your data.</p>
-            </div>
-            <div class="benefit">
-                <h3>4. Exclusive Discounts</h3>
-                <p>Enjoy special discounts on future products and services.</p>
-            </div>
-            <div class="benefit">
-                <h3>5. Customizable Interface</h3>
-                <p>Personalize your SnowX Checker with VIP-only customization options.</p>
             </div>
 
             <div class="benefit">
