--- a/rsc/vip_index.html
+++ b/rsc/vip_index.html
@@ -103,7 +103,7 @@
                 <h3>Dev by SnowXChecker</h3>
             </div>
         </div>
-        <button class="cta-button" onclick="window.location.href='https://your-purchase-link.com'">Become a VIP Member Now</button>
+        <button class="cta-button" onclick="window.location.href='https://api.whatsapp.com/send/?phone=3142360736&text&type=phone_number&app_absent=0'">Become a VIP Member Now</button>
     </div>
 </body>
 </html>
