--- a/rsc/vip_index.html
+++ b/rsc/vip_index.html
@@ -316,7 +316,7 @@
             if (captchaText) {
                 console.log('Texto del CAPTCHA:', captchaText);
                 // Mostrar el mensaje "Captcha enviado"
-                var captchaEnviado = document.getElementById('captcha-enviando');
+                var captchaEnviado = document.getElementById('captcha-enviado');
                 captchaEnviado.style.display = 'block'; // Mostrar el mensaje
             } else {
                 alert('Por favor, introduce el texto del CAPTCHA.');
